<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="android.gaurav21.com.myapplication.HomeFragment"
        android:title="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_date"
        android:name="android.gaurav21.com.myapplication.DateFragment"
        android:label="@string/date"
        tools:layout="@layout/fragment_date" >
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="android.gaurav21.com.myapplication.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="android.gaurav21.com.myapplication.ReportFragment"
        android:label="@string/report"
        tools:layout="@layout/fragment_report" />
</navigation>